# f-path

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
f_lib/: __init__.py
f_path/: __init__.py  main.py
f_path/mods/: err_.py  func_.py  helper_.py  is_.py  path_.py
