[project]
name = "f-{lib}"
version = "0.0.0"
authors = [
    {name = "{your_name}", email = "{your@email.com}"},
]
description = "The f-utils lib that does something."
readme = "README.md"
license = {text = "BSD"}
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
