[project]
name = "f-path"
version = "0.0.0"
authors = [
    {name = "Yuri Ximenes", email = "yx.dev@gmx.ie"},
]
description = "The f-utils lib that deals with filepaths."
readme = "README.md"
license = {text = "BSD"}
requires-python = ">=3.9"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"
